--- a/assessment.css
+++ b/assessment.css
@@ -8,6 +8,12 @@ table#scoreBoard {
   text-align: center;
 
 }
+tr:nth-child(even) {
+  background: lightgrey;
+}
+tr:nth-child(odd){
+  background: lightblue;
+}
 th {
   color: maroon;
   font-weight: bold;
@@ -39,6 +45,7 @@ blockquote {
   background-image: url(https://upload.wikimedia.org/wikipedia/commons/5/5c/Chicago_Bears_logo.svg);
   background-size: contain;
   background-repeat: no-repeat;
+
 }
 #teamRoster>li>img:first-child {
   display:none;
